# Project-23

./: .gitignore  README.md
Calculator/: CMakeLists.txt  Main.cpp  UnitTests.cpp
Calculator/Calculator/: Calculator.h
Calculator/Calculator/Core/: Calculator.cpp  Classes.h  Core.h  Utils.cpp
Calculator/Calculator/Syntaxizer/: Node.cpp  Node.h  Syntaxizer.cpp  Syntaxizer.h
Calculator/Calculator/Syntaxizer/Nodes/: E.cpp  E.h  G.cpp  G.h  K.cpp  K.h  M.cpp  M.h  P.cpp  P.h  T.cpp  T.h
Calculator/Calculator/Tokenizer/: Token.cpp  Token.h  Tokenizer.cpp
